[gd_scene load_steps=11 format=3 uid="uid://06vk8516aefu"]

[ext_resource type="Script" path="res://intro/Script/SocialVideo.gd" id="1_gvy1b"]
[ext_resource type="AudioStream" uid="uid://cvxtxqg8tscrm" path="res://SFX/presssfx.mp3" id="2_jx1bn"]
[ext_resource type="Texture2D" uid="uid://0trj3dhh5oxu" path="res://assets/bg/bgg.jpg" id="2_rrf37"]
[ext_resource type="Texture2D" uid="uid://dx74juklix0pr" path="res://assets/bg/lockbg.png" id="3_3bysk"]
[ext_resource type="Texture2D" uid="uid://cac4o0n45wve6" path="res://assets/icon/Icon_ArrowLeft.png" id="3_343et"]
[ext_resource type="Texture2D" uid="uid://dl2tk6raey140" path="res://assets/bg/Screenshot (269).png" id="3_h844e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t58md"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hrrsd"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_52ufq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u4o0v"]

[node name="SocialVideo" type="Control" node_paths=PackedStringArray("PressSFX")]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gvy1b")
PressSFX = NodePath("AudioStreamPlayer2D")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 651.0
texture = ExtResource("2_rrf37")
expand_mode = 1

[node name="Cartoon1" type="Button" parent="."]
layout_mode = 0
offset_left = 129.0
offset_top = 213.0
offset_right = 414.0
offset_bottom = 585.0
theme_override_styles/normal = SubResource("StyleBoxFlat_t58md")
icon = ExtResource("3_h844e")
flat = true
expand_icon = true

[node name="Cartoon2" type="Button" parent="."]
layout_mode = 0
offset_left = 453.0
offset_top = 213.0
offset_right = 753.0
offset_bottom = 606.0
theme_override_styles/normal = SubResource("StyleBoxFlat_hrrsd")
icon = ExtResource("3_3bysk")
flat = true
expand_icon = true

[node name="Cartoon3" type="Button" parent="."]
layout_mode = 0
offset_left = 776.0
offset_top = 213.0
offset_right = 1078.0
offset_bottom = 606.0
theme_override_styles/normal = SubResource("StyleBoxFlat_52ufq")
icon = ExtResource("3_3bysk")
flat = true
expand_icon = true

[node name="goback" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 39.0
offset_right = 129.0
offset_bottom = 129.0
theme_override_styles/normal = SubResource("StyleBoxFlat_u4o0v")
icon = ExtResource("3_343et")
flat = true
expand_icon = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_jx1bn")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 397.0
offset_top = 65.0
offset_right = 745.0
offset_bottom = 148.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Social Video"

[connection signal="pressed" from="Cartoon1" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Cartoon2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Cartoon3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="goback" to="." method="_on_button_4_pressed"]
